--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
-    "razorpay": "^2.0.0"
+    "razorpay": "^2.0.0",
+    "dotenv": "^8.2.0"
   }
 }
