--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "razorpay",
+  "name": "razorpay-app",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.17.1",
-    "razorpay": "^2.0.0",
-    "dotenv": "^8.2.0"
+    "razorpay": "^2.8.3",
+    "dotenv": "^16.0.3",
+    "crypto": "^1.0.1"
   }
 }
