--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "razorpay": "^2.8.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
-    "crypto": "^1.0.1"
+    "express": "^4.17.1",
+    "ngrok": "^5.0.0-beta.2",
+    "razorpay": "^2.8.3"
   }
 }
