--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "ngrok": "^5.0.0-beta.2",
-    "razorpay": "^2.8.3"
+    "razorpay": "^2.8.3",
+    "cors": "2.8.5"
   }
 }
